✨  Added Script Field.

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,6 +25,12 @@ collections:
       - { label: 'Featured Image', name: 'featuredimage', widget: image }
       - { label: 'Body', name: 'body', widget: 'markdown' }
       - { label: 'Tags', name: 'tags', widget: 'list' }
+      - {
+          label: 'Script',
+          name: 'script',
+          default_language: 'javascript',
+          widget: 'code',
+        }
 
   - name: 'pages'
     label: 'Pages'
